--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,8 @@
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -89,5 +90,7 @@ typings/
 # dotenv environment variables file
 .env
 
-
-
+# Firebase
+.runtimeconfig.json
+firebase-debug.log
+out/
