--- a/.gitignore
+++ b/.gitignore
@@ -94,4 +94,4 @@ typings/
 sandbox-329fc-firebase-adminsdk.json
 .runtimeconfig.json
 firebase-debug.log
-out/
+sample-cloud-functions/functions/out
