--- a/retrycf/package.json
+++ b/retrycf/package.json
@@ -3,8 +3,10 @@
   "version": "0.0.1",
   "description": "retry cloud functions",
   "main": "out/retrycf.js",
+  "types": "out/retrycf.d.ts",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "tslint -p tslint.json && tsc -d"
   },
   "repository": {
     "type": "git",
@@ -14,5 +16,23 @@
     "firebase"
   ],
   "author": "star__hoshi",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@types/jest": "^22.0.0",
+    "jest": "^22.1.4",
+    "ts-jest": "^22.0.0",
+    "tslint": "^5.9.1",
+    "typescript": "^2.6.2"
+  },
+  "jest": {
+    "transform": {
+      "\\.ts": "<rootDir>/node_modules/ts-jest/preprocessor.js"
+    },
+    "testRegex": "src/__tests__/.*.test.ts",
+    "moduleFileExtensions": [
+      "ts",
+      "js",
+      "json"
+    ]
+  }
 }
