--- a/retrycf/package.json
+++ b/retrycf/package.json
@@ -35,5 +35,9 @@
       "js",
       "json"
     ]
+  },
+  "dependencies": {
+    "firebase-admin": "^5.8.1",
+    "firebase-functions": "^0.8.1"
   }
 }
