--- a/retrycf/package.json
+++ b/retrycf/package.json
@@ -38,6 +38,7 @@
   },
   "dependencies": {
     "firebase-admin": "^5.8.1",
-    "firebase-functions": "^0.8.1"
+    "firebase-functions": "^0.8.1",
+    "pring": "^0.4.1"
   }
 }
