--- a/sample-cloud-functions/functions/package.json
+++ b/sample-cloud-functions/functions/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "firebase-admin": "~5.8.1",
     "firebase-functions": "^0.8.1",
+    "pring": "^0.4.1",
     "retrycf": "^0.0.8"
   },
   "private": true,
