--- a/retrycf/package.json
+++ b/retrycf/package.json
@@ -37,6 +37,7 @@
     ]
   },
   "dependencies": {
+    "@google-cloud/firestore": "^0.11.2",
     "firebase-admin": "^5.8.1",
     "firebase-functions": "^0.8.1",
     "pring": "^0.4.1"
