--- a/retrycf/package.json
+++ b/retrycf/package.json
@@ -1,6 +1,6 @@
 {
   "name": "retrycf",
-  "version": "0.0.34",
+  "version": "0.0.35",
   "description": "retry cloud functions",
   "main": "out/retrycf.js",
   "types": "out/retrycf.d.ts",
@@ -37,7 +37,7 @@
     ]
   },
   "dependencies": {
-    "@google-cloud/firestore": "^0.11.2",
+    "@google-cloud/firestore": "0.11.1",
     "firebase-admin": "^5.8.1",
     "firebase-functions": "^0.8.1",
     "pring": "^0.4.1"
