--- a/retrycf/package.json
+++ b/retrycf/package.json
@@ -19,9 +19,9 @@
   "author": "star__hoshi",
   "license": "MIT",
   "devDependencies": {
-    "@types/jest": "^22.0.0",
+    "@types/jest": "^22.1.1",
     "jest": "^22.1.4",
-    "ts-jest": "^22.0.0",
+    "ts-jest": "^22.0.2",
     "tslint": "^5.9.1",
     "typescript": "^2.6.2"
   },
@@ -37,9 +37,9 @@
     ]
   },
   "dependencies": {
-    "@google-cloud/firestore": "0.11.1",
-    "firebase-admin": "^5.8.1",
+    "@google-cloud/firestore": "^0.11.2",
+    "firebase-admin": "^5.8.2",
     "firebase-functions": "^0.8.1",
-    "pring": "^0.4.1"
+    "pring": "^0.5.1"
   }
 }
