--- a/sample-cloud-functions/functions/package.json
+++ b/sample-cloud-functions/functions/package.json
@@ -12,16 +12,17 @@
     "deploy": "tsc && firebase deploy --only functions"
   },
   "dependencies": {
+    "event-response": "^0.1.3",
     "firebase-admin": "~5.8.2",
     "firebase-functions": "^0.8.1",
     "pring": "^0.5.2",
-    "retrycf": "^0.1.1"
+    "retrycf": "^0.1.3"
   },
   "private": true,
   "main": "out/index.js",
   "devDependencies": {
-    "@types/jest": "^22.1.1",
-    "jest": "^22.2.0",
+    "@types/jest": "^22.1.2",
+    "jest": "^22.2.2",
     "ts-jest": "^22.0.3",
     "tslint": "^5.9.1",
     "typescript": "^2.7.1"
