--- a/retrycf/package.json
+++ b/retrycf/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@types/jest": "^22.1.1",
     "jest": "^22.1.4",
+    "rescue-fire": "^0.2.0",
     "ts-jest": "^22.0.2",
     "tslint": "^5.9.1",
     "typescript": "^2.6.2"
