--- a/package.json
+++ b/package.json
@@ -41,8 +41,6 @@
   },
   "dependencies": {
     "@google-cloud/firestore": "^0.11.2",
-    "firebase-admin": "^5.8.2",
-    "firebase-functions": "^0.8.1",
-    "pring": "^0.5.2"
+    "firebase-functions": "^0.8.1"
   }
 }
